@@ -1,3 +1,0 @@
-"""
-This module is used to manage files / directories.
-"""
