@@ -1,4 +1,0 @@
-"""
-The printing module.
-It includes some methods to print flashcards.
-"""
